[gd_scene load_steps=7 format=3 uid="uid://b83vdwhcmsujk"]

[ext_resource type="Script" path="res://highscores.gd" id="1_7lvxo"]
[ext_resource type="FontFile" uid="uid://bce5ycxtp86nk" path="res://assets/fonts/BD_Cartoon_Shout.ttf" id="2_rjk7q"]
[ext_resource type="Texture2D" uid="uid://tsyjgc5w8ea4" path="res://assets/menu/x button.png" id="7_2p6xn"]
[ext_resource type="Texture2D" uid="uid://bvjtpdy8847k3" path="res://assets/menu/x button pressed.png" id="8_7w4fl"]
[ext_resource type="AudioStream" uid="uid://25mk10ep4lew" path="res://assets/sounds and music/sfx/button click/pop.mp3" id="9_jqj37"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_jkvgt"]
load_path = "res://.godot/imported/game over panel.png-3dc6cd97e4522d28c1a40fa36914add9.ctex"

[node name="HighScores" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7lvxo")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.972549, 0.972549, 0.972549, 0.0392157)

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -337.0
offset_top = -640.0
offset_right = 343.0
offset_bottom = 640.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = -61.0
offset_top = 40.0
offset_right = 733.0
offset_bottom = 1280.0
texture = SubResource("CompressedTexture2D_jkvgt")
expand_mode = 3
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="PausedLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -292.0
offset_top = 121.0
offset_right = 278.0
offset_bottom = 205.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.223529, 0.0666667, 0.00784314, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("2_rjk7q")
theme_override_font_sizes/font_size = 75
text = "HighScores"
horizontal_alignment = 1

[node name="CloseButton" type="TextureButton" parent="Panel"]
layout_mode = 0
offset_left = 583.0
offset_top = 40.0
offset_right = 752.0
offset_bottom = 174.0
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("7_2p6xn")
texture_pressed = ExtResource("8_7w4fl")
ignore_texture_size = true
stretch_mode = 5

[node name="ScoresScrollContainer" type="ScrollContainer" parent="Panel"]
custom_minimum_size = Vector2(690, 0)
layout_mode = 0
offset_left = -10.0
offset_top = 238.0
offset_right = 688.0
offset_bottom = 1178.0
horizontal_scroll_mode = 0

[node name="ScoresContainer" type="VBoxContainer" parent="Panel/ScoresScrollContainer"]
custom_minimum_size = Vector2(690, 0)
layout_mode = 2

[node name="ButtonClick" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("9_jqj37")

[connection signal="pressed" from="Panel/CloseButton" to="." method="_on_close_button_pressed"]
